Added Chartjs to Display Avg Score/gen & add start and stop(save best snake)

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 canvas {
     display: block;
-    background-color: blue;
+    /* background-color: blue; */
     width: 100%;
     height: auto;
 }
